Deo odgovora na drugu polovinu zadatih pitanja.
Pravila pisanja rada nisu u potpunosti ispostovana, bice uradjeno.
Takodje, bice i dopune u naznacenim delovima i u nastavku samog teksta

--- a/NaslovKovacevicIvicKovacevic.tex
+++ b/NaslovKovacevicIvicKovacevic.tex
@@ -8,6 +8,8 @@
 \usepackage[utf8]{inputenc}
 \usepackage{graphicx}
 
+\usepackage{listings}
+
 \usepackage[english,serbian]{babel}
 
 \usepackage[unicode]{hyperref}
@@ -29,7 +31,56 @@
 \newpage
 
 \section{Uvod}
+\section{Bezbednost veb servera}
 
+
+Sa pojavom Veb 2.0, pove\'{c}anjem deljenja informacija preko socijalnih mre\v{z}a i kori\v{s}\'{c}enjem veba kao sredstva poslovanja i pru\v{z}anja razli\v{c}itih informacija bezbednost sajtova \v{c}esto biva ugro\v{z}ena direktnim upadima od strane zlonamernih programera.
+
+Zlonamerni programeri(u daljem tekstu hakeri) ili nastoje da kompromituju korporativnu mre\v{z}u ili navode krajnje korisnike koji pristupaju mre\v{z}i ka preuzimanju sadr\v{z}aja \v{c}ijeg rizika nisu svesni (virusi). Kao rezultat toga, industrija obra\'{c}a veliku pa\v{z}nju na bezbednost samih veb aplikacija, pored bezbednosti osnovne ra\v{c}unarske mre\v{z}e i operativnih sistema.
+
+\textbf{Bezbednost veb sajtova} je grana bezbednosti informacija koja se bavi bezbedno\v{s}\'{c}u veb sajtova, veb aplikacija i veb servera. Bezbednost veb aplikacija se oslanja na principe bezbednosti aplikacija uop\v{s}te, ali ih primenjuje specifi\v{c}no za internet i veb sisteme.
+Bezbednost veb servera je za\v{s}tita informacija dostupnih preko veb servera.
+
+
+\subsection{Sigurosni rizici}
+Najve\'{c}i sigurnosni rizici poti\v{c}u iz nerazumevanja sposobnosti hakera. Kada se razmi\v{s}lja o za\v{s}titi aplikacije, ne sme se voditi mi\v{s}lju: sve \v{s}to je prikazano, biva na\v{s}e ograni\v{c}enje onoga \v{s}to mo\v{z}emo da u\v{c}inimo. Sve \v{s}to predstavlja klijentsku stranu i ograni\v{c}enja koja su na njoj nametnuta se veoma lako mogu zaobi\'{c}i.
+\textbf{Pretra\v{z}iva\v{c} ne predstavlja ograni\v{c}enje }.\\
+?U okrviru ovog rada, razmatra\'{c}emo tri velika sigurnosna rizika:
+\begin{enumerate}
+	\item Cross-Site Scripting (XSS)
+	\item SQL Injection
+	\item DOPUNA
+\end{enumerate}
+\newpage
+\subsection{Cross-Site Scripting (XSS)}
+\textbf{Cross Site Scripting, poznatiji kao XSS} je napad injekcijom kodova u sajt. Takodje je jedan od najuobi\v{c}ajnih na\v{c}ina napada, jer svaki sajt zahteva od korisnikovog pretra\v{z}iva\v{c}a podr\v{s}ku javascript-a.\\
+\textbf{Problem:} Korisnik je u situaciji da po\v{s}alje neki vid odgovora stranici(searchbox), a ako taj odgovor sadr\v{z}i neke HTML tagove ili javascript kod, stranica ih renderuje i izvr\v{s}ava kod.\\
+\textbf{Posledice:} \begin{enumerate}
+	\item kradja ID-a sesije i sasim tim kradja korisnikovog indentitea(u cilju obavljanja poslova u ime tog korisnika)
+	\item kontrola stranice (blokiranje rada, menjanje pojedina\v{c}nih elemenata...)
+	\item redirekcija na drugu, zlonamernu stranicu
+\end{enumerate}
+\subsubsection{XSS primeri}
+\textit{Reflexted XSS}\\\\
+Reflected XSS se javlja kada se napada zasniva na injektovanju izvr\v{s}nog koda u HTTP odgovor. Kod nije sa\v{c}uvan u okviru same aplikacije, ve\'{c}(u naivnim primerima) mo\v{z}e biti vidljiv u okviru nadogradjenog url-a(kao posledica http odgovora).\\
+Razmotrimo slede\'{c}i primer:\\
+Predpostavimo da imamo jednostavan sajt, \v{c}ija je uloga da ima ima jedan searchbox
+\begin{enumerate}
+\item nakon bilo kakve pretrage, promeni\'{c}e nam se url (www.sajt.com?key="pretrazujemo")
+\item izmenom sadr\v{z}aja sekcije 'key', mo\v{z}emo da ubacimo neki skript
+\begin{lstlisting}
+<script>alert("123")</script>
+\end{lstlisting}
+To isto mo\v{z}emo posti\'{c}i i sa uno\v{s}enjem takvog koda unutar searchbox-a
+\item Uno\v{s}enjem takvog url-a u na\v{s} pretra\v{z}iva\v{c} izlazi\'{c}e nam poruka "123"
+
+\end{enumerate}
+Naravno, ovo je jednostavan primer bez vidljivih znakova opasnosti, ali na sli\v{c}nom principu deluju zlonamerni mail-ovi koji nam pristi\v{z}u ili sajtovi(ili \v{c}ak korisnici) koji name\'{c}u linkove da korisnik klikne na njih.\\
+Na\v{c}in prikrivanja ovakvih napada(jer korisnik mo\v{z}e da nasluti iz url-a da je re\v{c} o linku ka zlonamernoj strani) jesu URL shortener aplikacije.\\\\
+\textit{Stored XSS}\\\\
+Suprotno Reflected XSS-u koji ne ostavlja tragove na samoj aplikaciji, odnosno unatar njenog koda je Stored XSS. Cilj stored XSS-a je da sakrije svoju zlonamernost tako \v{s}to je javan. Najprostiji primer jeste da u okviru napadnute aplikacije, haker ostavi link ka zlonamernoj stranici ili skidanje istog takvog programa.
+\subsubsection{XSS prevencija}
+Podsetimo, da je glavni problem upravo to \v{s}to pretra\v{z}iva\v{c} renderuje HTML tagove i izvr\v{s}ava javascript kod  
 \section{Zaključak}
 
 \addcontentsline{toc}{section}{Literatura}
